--- a/swipebox.css
+++ b/swipebox.css
@@ -89,7 +89,7 @@ html.swipebox-html.swipebox-touch {
   left: 0;
 }
 #swipebox-slider .slide-loading {
-  background: url(../img/loader.gif) no-repeat center center;
+  background: url(loader.gif) no-repeat center center;
 }
 
 #swipebox-bottom-bar,
@@ -128,7 +128,7 @@ html.swipebox-html.swipebox-touch {
 #swipebox-prev,
 #swipebox-next,
 #swipebox-close {
-  background-image: url(../img/icons.png);
+  background-image: url(icons.png);
   background-repeat: no-repeat;
   border: none !important;
   text-decoration: none !important;
@@ -146,12 +146,12 @@ html.swipebox-html.swipebox-touch {
 }
 
 #swipebox-prev {
-  background-position: -32px 13px;
+  background-position: -88px 3px;
   float: left;
 }
 
 #swipebox-next {
-  background-position: -78px 13px;
+  background-position: -180px 3px;
   float: right;
 }
 
@@ -160,7 +160,7 @@ html.swipebox-html.swipebox-touch {
   right: 0;
   position: absolute;
   z-index: 9999;
-  background-position: 15px 12px;
+  background-position: 7px 0px;
 }
 
 .swipebox-no-close-button #swipebox-close {
@@ -291,5 +291,4 @@ html.swipebox-html.swipebox-touch {
   color: white !important;
   font-size: 15px;
   line-height: 43px;
-  font-family: Helvetica, Arial, sans-serif;
 }
