--- a/swipebox.css
+++ b/swipebox.css
@@ -16,9 +16,7 @@ html.swipebox-html.swipebox-touch {
   z-index: 99999 !important;
   overflow: hidden;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
 }
 
 #swipebox-container {
@@ -29,7 +27,7 @@ html.swipebox-html.swipebox-touch {
 
 #swipebox-slider {
   -webkit-transition: -webkit-transform 0.4s ease;
-          transition: transform 0.4s ease;
+  transition: transform 0.4s ease;
   height: 100%;
   left: 0;
   top: 0;
@@ -72,7 +70,7 @@ html.swipebox-html.swipebox-touch {
   width: 100%;
   padding: 5%;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 #swipebox-slider .slide .swipebox-video-container .swipebox-video {
   width: 100%;
@@ -89,13 +87,32 @@ html.swipebox-html.swipebox-touch {
   left: 0;
 }
 #swipebox-slider .slide-loading {
-  background: url(loader.gif) no-repeat center center;
+  border: 10px solid;
+  border-top-color: transparent !important;
+  border-radius: 60px;
+  width: 60px;
+  height: 60px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  -webkit-animation: loading 800ms infinite linear;
+  animation: loading 800ms infinite linear;
+}
+
+@-webkit-keyframes loading {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes loading {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #swipebox-bottom-bar,
 #swipebox-top-bar {
   -webkit-transition: 0.5s;
-          transition: 0.5s;
+  transition: 0.5s;
   position: absolute;
   left: 0;
   z-index: 999;
@@ -108,7 +125,7 @@ html.swipebox-html.swipebox-touch {
 }
 #swipebox-bottom-bar.visible-bars {
   -webkit-transform: translate3d(0, -50px, 0);
-          transform: translate3d(0, -50px, 0);
+  transform: translate3d(0, -50px, 0);
 }
 
 #swipebox-top-bar {
@@ -116,7 +133,7 @@ html.swipebox-html.swipebox-touch {
 }
 #swipebox-top-bar.visible-bars {
   -webkit-transform: translate3d(0, 50px, 0);
-          transform: translate3d(0, 50px, 0);
+  transform: translate3d(0, 50px, 0);
 }
 
 #swipebox-title {
@@ -174,18 +191,18 @@ html.swipebox-html.swipebox-touch {
 
 .swipebox-no-touch #swipebox-overlay.rightSpring #swipebox-slider {
   -webkit-animation: rightSpring 0.3s;
-          animation: rightSpring 0.3s;
+  animation: rightSpring 0.3s;
 }
 .swipebox-no-touch #swipebox-overlay.leftSpring #swipebox-slider {
   -webkit-animation: leftSpring 0.3s;
-          animation: leftSpring 0.3s;
+  animation: leftSpring 0.3s;
 }
 
 .swipebox-touch #swipebox-container:before, .swipebox-touch #swipebox-container:after {
   -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: all .3s ease;
-          transition: all .3s ease;
+  transition: all .3s ease;
   content: ' ';
   position: absolute;
   z-index: 999;
@@ -197,12 +214,12 @@ html.swipebox-html.swipebox-touch {
 .swipebox-touch #swipebox-container:before {
   left: 0;
   -webkit-box-shadow: inset 10px 0px 10px -8px #656565;
-          box-shadow: inset 10px 0px 10px -8px #656565;
+  box-shadow: inset 10px 0px 10px -8px #656565;
 }
 .swipebox-touch #swipebox-container:after {
   right: 0;
   -webkit-box-shadow: inset -10px 0px 10px -8px #656565;
-          box-shadow: inset -10px 0px 10px -8px #656565;
+  box-shadow: inset -10px 0px 10px -8px #656565;
 }
 .swipebox-touch #swipebox-overlay.leftSpringTouch #swipebox-container:before {
   opacity: 1;
@@ -212,58 +229,27 @@ html.swipebox-html.swipebox-touch {
 }
 
 @-webkit-keyframes rightSpring {
-  0% {
-    left: 0;
-  }
-
-  50% {
-    left: -30px;
-  }
-
-  100% {
-    left: 0;
-  }
+  0% { left: 0; }
+  50% { left: -30px; }
+  100% { left: 0; }
 }
 
 @keyframes rightSpring {
-  0% {
-    left: 0;
-  }
-
-  50% {
-    left: -30px;
-  }
-
-  100% {
-    left: 0;
-  }
+  0% { left: 0; }
+  50% { left: -30px; }
+  100% { left: 0; }
 }
 @-webkit-keyframes leftSpring {
-  0% {
-    left: 0;
-  }
-
-  50% {
-    left: 30px;
-  }
-
-  100% {
-    left: 0;
-  }
+  0% { left: 0; }
+  50% { left: 30px; }
+  100% { left: 0; }
 }
 @keyframes leftSpring {
-  0% {
-    left: 0;
-  }
-
-  50% {
-    left: 30px;
-  }
-
-  100% {
-    left: 0;
-  }
+  0% { left: 0; }
+  50% { left: 30px; }
+  100% { left: 0; }
 }
+
 @media screen and (min-width: 800px) {
   #swipebox-close {
     right: 10px;
@@ -274,21 +260,24 @@ html.swipebox-html.swipebox-touch {
     max-width: 800px;
   }
 }
-/* Skin 
---------------------------*/
+
+/* --- Style --- */
+
 #swipebox-overlay {
-  background: #0d0d0d;
+  background: rgba(0,0,0,.8); /* Background color */
 }
 
 #swipebox-bottom-bar,
 #swipebox-top-bar {
-  text-shadow: 1px 1px 1px black;
-  background: #000;
-  opacity: 0.95;
+  background-color: rgba(0,0,0,.5); /* Background for top and bottom bars */
 }
 
-#swipebox-top-bar {
-  color: white !important;
+#swipebox-top-bar { /* Content style for top bar */
+  color: #fff;
   font-size: 15px;
   line-height: 43px;
+}
+
+#swipebox-slider .slide-loading {
+  border-color: #fff; /* Color for loading circle  */
 }
